force-app/main/default/objects/Dan360_Lugar_de_Trabajo__c/Dan360_Lugar_de_Trabajo__c.object-meta.xml
<CustomObject>
    <description>Objeto para relacionar cuentas y contactos</description>
    <label>Cuenta Contacto</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Cuenta Contacto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuentas Contactos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>