force-app/main/default/objects/Dan360_Lugar_de_Trabajo__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <description>Cargo que cumple el profesional en la institucion</description>
    <label>Cargo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cargo</valueSetName>
    </valueSet>
</CustomField>