force-app/main/default/objects/Dan360_Lugar_de_Trabajo__c/fields/Dias_de_Atencion__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Atencion__c</fullName>
    <label>Días de atención</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunes</fullName>
            </value>
            <value>
                <fullName>Martes</fullName>
            </value>
            <value>
                <fullName>Miercoles</fullName>
            </value>
            <value>
                <fullName>Jueves</fullName>
            </value>
            <value>
                <fullName>Viernes</fullName>
            </value>
            <value>
                <fullName>Sabado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>