force-app/main/default/objects/Dan360_Lugar_de_Trabajo__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Institucion en la que trabaja el Profesional.</description>
    <label>Cuenta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institución, Consultorio, Farmacia, Institución</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contactos Relacionados</relationshipLabel>
    <relationshipName>Lugares_de_Trabajo</relationshipName>
    <type>Lookup</type>
</CustomField>