force-app/main/default/objects/Dan360_Lugar_de_Trabajo__c/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas Relacionadas</relationshipLabel>
    <relationshipName>Lugares_de_Trabajo_Profesional</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>